jumper style fix

--- a/src/assets/style/pagination.scss
+++ b/src/assets/style/pagination.scss
@@ -1,7 +1,5 @@
 .pagination {
-  margin: 5px 0;
-  padding: 20px 0 0 0;
-  display: inline-block;
+  margin-right: 20px;
 }
 
 .jumper {
@@ -14,6 +12,135 @@
   text-align: center;
 }
 
-// .pagination-nav {
-//   border-top: 1px solid black;
-// }
+.wrap {
+  display: inline-block;
+  /* right: 0; */
+  /* top: 40%; */
+  width: 200px;
+  left: 0;
+  /* margin: 0 auto; */
+  position: relative;
+}
+
+/* select starting stylings ------------------------------*/
+.select {
+  font-family: "Open Sans", sans-serif;
+  position: relative;
+  width: 200px;
+  border: 1px solid #c0c4cc;
+  border-radius: 5px;
+}
+
+.select-text {
+  position: relative;
+  font-family: inherit;
+  background-color: transparent;
+  width: 200px;
+  padding: 10px 10px 10px 10px;
+  font-size: 14px;
+  border-radius: 0;
+  border: none;
+  border-bottom: 1px solid #c0c4cc;
+}
+
+/* Remove focus */
+.select-text:focus {
+  outline: none;
+  border-bottom: 1px solid #c0c4cc;
+}
+
+/* Use custom arrow */
+.select .select-text {
+  appearance: none;
+  -webkit-appearance: none;
+}
+
+.select:after {
+  position: absolute;
+  top: 18px;
+  right: 10px;
+  /* Styling the down arrow */
+  width: 0;
+  height: 0;
+  padding: 0;
+  content: "";
+  border-left: 6px solid transparent;
+  border-right: 6px solid transparent;
+  border-top: 6px solid #c0c4cc;
+  pointer-events: none;
+}
+
+/* LABEL ======================================= */
+.select-label {
+  color: rgba(0, 0, 0, 0.26);
+  font-size: 18px;
+  font-weight: normal;
+  position: absolute;
+  pointer-events: none;
+  left: 10px;
+  top: 10px;
+  transition: 0.2s ease all;
+}
+
+/* active state */
+.select-text:focus ~ .select-label,
+.select-text:valid ~ .select-label {
+  color: #409eff;
+  background-color: #f4f6fb;
+  padding-left: 10px;
+  padding-right: 10px;
+  top: -9px;
+  transition: 0.2s ease all;
+  font-size: 14px;
+}
+
+/* BOTTOM BARS ================================= */
+.select-bar {
+  position: relative;
+  display: block;
+  width: 200px;
+}
+
+.select-bar:before,
+.select-bar:after {
+  content: "";
+  height: 2px;
+  width: 0;
+  bottom: 1px;
+  position: absolute;
+  background: #409eff;
+  transition: 0.2s ease all;
+}
+
+.select-bar:before {
+  left: 50%;
+}
+
+.select-bar:after {
+  right: 50%;
+}
+
+/* active state */
+.select-text:focus ~ .select-bar:before,
+.select-text:focus ~ .select-bar:after {
+  width: 50%;
+}
+
+/* HIGHLIGHTER ================================== */
+.select-highlight {
+  position: absolute;
+  height: 60%;
+  width: 100px;
+  top: 25%;
+  left: 0;
+  pointer-events: none;
+  opacity: 0.5;
+}
+
+.pagination-nav {
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  margin-bottom: 50px;
+  margin-top: 30px;
+}
